soroban-sdk/tests/macros_fails/macros_spec_fn_name_too_long.stderr
error: custom attribute panicked
 --> tests/macros_fails/macros_spec_fn_name_too_long.rs:5:1
  |
5 | #[contractimpl]
  | ^^^^^^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: LengthExceedsMax
